# l-space-librarian

./: .gitignore  README.md  pyproject.toml
consume_selection/: __init__.py  db.py  embed.py  fts.py  groundtruth.py  hopswiki.py  ingest.py  labels.py  librarything.py  mismatch.py  podcasts.py  toread.py  watchlater.py
