[project]
name = "consume-selection"
version = "0.1.0"
description = "Local consume-index for prioritising what to read/watch from the Readwise firehose. Stage 1: index substrate + ingest + ground-truth puller."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastcore>=1.7",
    "readwise-tools",
]

[project.scripts]
cs-init = "consume_selection.db:main"
cs-ingest = "consume_selection.ingest:main"
cs-groundtruth = "consume_selection.groundtruth:main"
cs-label = "consume_selection.labels:main"
cs-fts = "consume_selection.fts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consume_selection"]

# Reuse the existing Readwise CLI/client rather than reinventing API access.
# Local path dependency for now; swap to the public git repo
# (Hopsakee/readwise-tools) for portability — same pattern as _TOLIBRARY_PODCAST.
[tool.uv.sources]
readwise-tools = { path = "../readwise-tools", editable = true }
