[project]
name = "l-space-librarian"
version = "0.1.0"
description = "The Librarian that collects consumable items (Readwise Reader + YouTube Watch Later) into L-space — a local SQLite index (l-space.db) for prioritising what to read/watch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastcore>=1.7",
    "readwise-tools",
    "youtube-transcript-api>=1.0.0",
]

[project.scripts]
cs-init = "consume_selection.db:main"
cs-ingest = "consume_selection.ingest:main"
cs-groundtruth = "consume_selection.groundtruth:main"
cs-label = "consume_selection.labels:main"
cs-fts = "consume_selection.fts:main"
cs-embed = "consume_selection.embed:main"
cs-match = "consume_selection.embed:main"
cs-watchlater = "consume_selection.watchlater:main"
cs-librarything = "consume_selection.librarything:main"
cs-toread = "consume_selection.toread:main"
cs-podcasts = "consume_selection.podcasts:main"

[project.optional-dependencies]
# Local in-process embeddings (sentence-transformers backend). Heavy (pulls torch);
# kept optional so the core CLIs install light. Enable with: uv sync --extra embed
embed = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consume_selection"]

# Reuse the existing Readwise CLI/client rather than reinventing API access.
# Local path dependency for now; swap to the public git repo
# (Hopsakee/readwise-tools) for portability — same pattern as _TOLIBRARY_PODCAST.
[tool.uv.sources]
readwise-tools = { path = "../readwise-tools", editable = true }

# NOTE on the `embed` extra: `sentence-transformers` pulls `torch`, which on Linux
# drags in ~3GB of nvidia/CUDA wheels (gated only on sys_platform=='linux'). On a
# disk-tight machine install CPU-only torch FIRST, e.g.:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cpu
# then `uv sync --extra embed`. BUT the preferred embedding path is the Ollama
# backend (CONSUME_EMBED_BACKEND=ollama) — pure HTTP, NO torch at all. Use that on
# the MacMini; the `embed` extra is only the in-process fallback.
